# aeroweb

./: Cargo.toml  README.md
data/: cartes.xml  dossier.xml  flight_plan.xml  maa.xml  maps.xml  opmet.xml  opmet2.xml  predec.xml  sigmet.xml  sigmet2.xml  sw.xml  tca.xml  tcag.xml  vaa.xml  vag.xml  validation.xml
src/: client.rs  helpers.rs  lib.rs
src/models/: cartes.rs  dossier.rs  error.rs  flight_plan.rs  maa.rs  maps.rs  mod.rs  opmet.rs  predec.rs  sigmet.rs  sw.rs  tca.rs  tcag.rs  vaa.rs  vag.rs
src/types/: airport.rs  cartes.rs  center.rs  client.rs  dossier.rs  error.rs  fir.rs  helpers.rs  maa.rs  map.rs  message.rs  mod.rs  oaci.rs  oaci_airport.rs  oaci_fir.rs  oaci_multiple.rs  opmet.rs  predec.rs  sigmet.rs  sw.rs  tca.rs  tcag.rs  vaa.rs  vag.rs
