[package]
name = "aeroweb"
version = "0.1.6"
edition = "2021"
authors = ["Adrian Tombu <adrian@otso.fr>"]
keywords = ["meteo", "meteorology", "aeronautics", "aviation", "metar"]
categories = ["aerospace", "science::geo", "web-programming"]
description = "A library to retrieve data from Meteo France's aeronautical meteorologic services"
license = "GPL-3.0"
repository = "https://github.com/adriantombu/aeroweb"
include = ["/src", "LICENSE.md", "README.md"]

[dependencies]
quick-xml = { version = "0.32.0", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.61"
