[package]
name = "aeroweb"
version = "0.1.8"
edition = "2021"
authors = ["Adrian Tombu <adrian@otso.fr>"]
keywords = ["meteo", "meteorology", "aeronautics", "aviation", "metar"]
categories = ["aerospace", "science::geo", "web-programming"]
description = "A library to retrieve data from Meteo France's aeronautical meteorologic services"
license = "GPL-3.0"
repository = "https://github.com/adriantombu/aeroweb"
include = ["/src", "LICENSE.md", "README.md"]

[dependencies]
quick-xml = { version = "0.36", features = ["serialize"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1", features = ["full"] }
